StreamReadFilter support to InMemoryEventStore